Remove Spring data with spring jdbc

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.main.banner-mode=off
-spring.jpa.show-sql=false
+spring.datasource.platform=h2
+spring.datasource.driveClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb;MODE=PostgreSQL
 
 app.name=MyCMS
 app.greeting= Hello World
